fixed issue with caledar overlapping images on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,4 +152,7 @@ div[data-title]:hover:after {
     margin-left: 0 !important;
     width: auto;
   }
+  .cal {
+    width: auto;
+  }
 }
